--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ronda 1 - Torneo XYZ</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Registro - Torneo XYZ</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Incluir Font Awesome para los íconos -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
-    /* Estilos generales */
+    /* Estilos compartidos para la página */
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
@@ -14,9 +17,8 @@
       background-size: cover;
       color: #fff;
     }
-    /* Navbar con dropdown para Rondas */
     .navbar {
-      background: rgba(0,0,0,0.9);
+      background: rgba(0, 0, 0, 0.9);
       display: flex;
       justify-content: space-around;
       padding: 1rem 2rem;
@@ -25,42 +27,27 @@
       color: #fff;
       text-decoration: none;
       font-weight: bold;
-      padding: 0.5rem;
     }
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background: rgba(0,0,0,0.9);
-      min-width: 160px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      z-index: 1;
-    }
-    .dropdown-content a {
-      color: #fff;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
-    .dropdown-content a:hover {
-      background: #555;
-    }
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-    /* Contenedor principal */
     .container {
       margin: 2rem;
       backdrop-filter: blur(10px);
-      background: rgba(0,0,0,0.5);
+      background: rgba(0, 0, 0, 0.5);
       border-radius: 12px;
       padding: 2rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.7);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
     }
-    /* Estilos para la lista de participantes */
+    .filter {
+      margin-bottom: 1rem;
+    }
+    .filter label {
+      margin-right: 0.5rem;
+    }
+    .filter select {
+      padding: 0.3rem 0.5rem;
+      border-radius: 5px;
+      border: none;
+      outline: none;
+    }
     .participants {
       display: flex;
       flex-direction: column;
@@ -69,7 +56,7 @@
       display: flex;
       align-items: center;
       margin-bottom: 1rem;
-      background: rgba(0,0,0,0.8);
+      background: rgba(0, 0, 0, 0.8);
       border-radius: 10px;
       padding: 1rem;
       transition: transform 0.2s;
@@ -88,7 +75,29 @@
       margin-left: auto;
       font-size: 1.5rem;
       font-weight: bold;
-      color: #6eff3e;
+    }
+    /* Etiquetas de categoría */
+    .tag {
+      display: inline-block;
+      padding: 0.2rem 0.5rem;
+      border-radius: 5px;
+      margin-left: 1rem;
+      font-weight: bold;
+    }
+    .rojo { background-color: #ff4d4d; }
+    .verde { background-color: #3ae374; }
+    .azul { background-color: #1e90ff; }
+
+    /* Estilos para el ícono de video */
+    .video-btn {
+      margin-left: 1rem;
+      font-size: 1.5rem;
+      color: #ff4757;
+      transition: color 0.2s;
+      text-decoration: none;
+    }
+    .video-btn:hover {
+      color: #e84118;
     }
   </style>
 </head>
