--- a/registro.html
+++ b/registro.html
@@ -119,6 +119,10 @@
           <p>Nota Wolf: 09.40</p>
         </div>
         <div class="score" style="color: #6eff3e;">09.38</div>
+        <!-- Ícono que redirige al video del participante -->
+        <a href="https://youtube.com" target="_blank" class="video-btn" title="Ver Video">
+          <i class="fas fa-video"></i>
+        </a>
       </div>
       <!-- Participante Ejemplo - Verde -->
       <div class="participant" data-category="verde">
