--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: url('background.gif') no-repeat center center fixed;
+      background: url('https://64.media.tumblr.com/90f6cdcbc51c53fa4ca7294da96fc3f8/tumblr_pios19KpQC1ufq8wko1_540.gifv') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
     }
