--- a/registro.html
+++ b/registro.html
@@ -110,7 +110,7 @@
     <div id="participants" class="participants">
       <!-- Participante Ejemplo - Rojo -->
       <div class="participant" data-category="rojo">
-        <img src="profile1.jpg" alt="Participante 1">
+        <img src="https://64.media.tumblr.com/c7e8f8b56691c7188090aa9ef31b4055/2ebcc839069e6188-16/s540x810/07b5b2b3c26b945edec61508a821608789183674.pnj" alt="Participante 1">
         <div>
           <h3>Jimmy Mclovin <span class="tag rojo">Rojo</span></h3>
           <p>Nota Win: 09.90</p>
