--- a/registro.html
+++ b/registro.html
@@ -119,14 +119,13 @@
           <p>Nota Wolf: 09.40</p>
         </div>
         <div class="score" style="color: #6eff3e;">09.38</div>
-        <!-- Ícono que redirige al video del participante -->
-        <a href="https://youtube.com" target="_blank" class="video-btn" title="Ver Video">
-          <i class="fas fa-video"></i>
-        </a>
+       
       </div>
       <!-- Participante Ejemplo - Verde -->
       <div class="participant" data-category="verde">
+        <a href="https://www.youtube.com/watch?v=VIDEO_ID" target="_blank">
         <img src="profile2.jpg" alt="Participante 2">
+        </a>  
         <div>
           <h3>Laura Johnson <span class="tag verde">Verde</span></h3>
           <p>Nota Win: 08.50</p>
