--- a/registro.html
+++ b/registro.html
@@ -129,9 +129,7 @@
         <div>
           <h3>Laura Johnson <span class="tag verde">Verde</span></h3>
           <p>Nota Win: 08.50</p>
-          <p>Nota Ozzy: 09.00</p>
-          <p>Nota Raiyuga: 07.75</p>
-          <p>Nota Wolf: 08.90</p>
+          <p>Esta organización te ayudará a mantener tu proyecto ordenado y a navegar entre secciones (Inicio, Registro, Ranking y las distintas Rondas) de forma clara y separada. Si tienes más dudas o necesitas más detalles, ¡aquí estoy para ayudarte!</p>          
         </div>
         <div class="score" style="color: #6eff3e;">08.54</div>
       </div>
