--- a/registro.html
+++ b/registro.html
@@ -124,7 +124,7 @@
       <!-- Participante Ejemplo - Verde -->
       <div class="participant" data-category="verde">
         <a href="https://www.youtube.com/watch?v=VIDEO_ID" target="_blank">
-        <img src="profile2.jpg" alt="Participante 2">
+        <img src="https://64.media.tumblr.com/c7e8f8b56691c7188090aa9ef31b4055/2ebcc839069e6188-16/s540x810/07b5b2b3c26b945edec61508a821608789183674.pnj" alt="Participante 2">
         </a>  
         <div>
           <h3>Laura Johnson <span class="tag verde">Verde</span></h3>
