--- a/registro.html
+++ b/registro.html
@@ -128,7 +128,7 @@
         </a>  
         <div>
           <h3>Laura Johnson <span class="tag verde">Verde</span></h3>
-          <b><p>Nota Win: 08.50</p></b>b>
+          <b><p>Nota Win: 08.50</p></b>
           <p>Esta organización te ayudará a mantener tu proyecto ordenado y a navegar entre secciones (Inicio, Registro, Ranking y las distintas Rondas) de forma clara y separada. Si tienes más dudas o necesitas más detalles, ¡aquí estoy para ayudarte!</p>          
         </div>
         <div class="score" style="color: #6eff3e;">08.54</div>
