--- a/ranking.html
+++ b/ranking.html
@@ -56,6 +56,13 @@
     </style>
 </head>
 <body>
+     <!-- NAVBAR -->
+  <nav class="navbar">
+    <a href="index.html">Inicio</a>
+    <a href="registro.html">Registro</a>
+    <a href="ranking.html">Ranking</a>
+    <a href="rondas.html">Rondas</a>
+  </nav>
     <div class="filter-buttons">
         <button onclick="filterParticipants('all')" class="active">Todos</button>
         <button onclick="filterParticipants('active')">Activos</button>
