--- a/ranking.html
+++ b/ranking.html
@@ -31,7 +31,12 @@
             display: grid;
             grid-template-columns: repeat(5, 1fr);
             gap: 15px;
-        }
+        } 
+        .navbar a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      }      
         .participant {
             position: relative;
             width: 100%;
