--- a/ranking.html
+++ b/ranking.html
@@ -32,11 +32,17 @@
             grid-template-columns: repeat(5, 1fr);
             gap: 15px;
         } 
-        .navbar a {
+        .navbar {
+      background: rgba(0, 0, 0, 0.9);
+      display: flex;
+      justify-content: space-around;
+      padding: 1rem 2rem;
+    }
+    .navbar a {
       color: #fff;
       text-decoration: none;
       font-weight: bold;
-      }      
+    }
         .participant {
             position: relative;
             width: 100%;
