--- a/ranking.html
+++ b/ranking.html
@@ -81,13 +81,13 @@
     </div>
     <div class="participants-grid" id="participantsGrid">
         <a href="https://www.youtube.com/@active1" target="_blank" class="participant active">
-            <img src="https://via.placeholder.com/150" alt="Active 1">
+            <img src="https://64.media.tumblr.com/c7e8f8b56691c7188090aa9ef31b4055/2ebcc839069e6188-16/s540x810/07b5b2b3c26b945edec61508a821608789183674.pnj" alt="Active 1">
         </a>
         <a href="https://www.youtube.com/@inactive1" target="_blank" class="participant inactive">
-            <img src="https://via.placeholder.com/150" alt="Inactive 1">
+            <img src="https://64.media.tumblr.com/c7e8f8b56691c7188090aa9ef31b4055/2ebcc839069e6188-16/s540x810/07b5b2b3c26b945edec61508a821608789183674.pnj" alt="Inactive 1">
         </a>
         <a href="https://www.youtube.com/@active2" target="_blank" class="participant active">
-            <img src="https://via.placeholder.com/150" alt="Active 2">
+            <img src="https://64.media.tumblr.com/c7e8f8b56691c7188090aa9ef31b4055/2ebcc839069e6188-16/s540x810/07b5b2b3c26b945edec61508a821608789183674.pnj" alt="Active 2">
         </a>
         <a href="https://www.youtube.com/@inactive2" target="_blank" class="participant inactive">
             <img src="https://via.placeholder.com/150" alt="Inactive 2">
