--- a/ranking.html
+++ b/ranking.html
@@ -74,6 +74,7 @@
     <a href="ranking.html">Ranking</a>
     <a href="rondas.html">Rondas</a>
   </nav>
+    
     <div class="filter-buttons">
         <button onclick="filterParticipants('all')" class="active">Todos</button>
         <button onclick="filterParticipants('active')">Activos</button>
@@ -86,7 +87,7 @@
         <a href="https://www.youtube.com/@inactive1" target="_blank" class="participant inactive">
             <img src="https://64.media.tumblr.com/c7e8f8b56691c7188090aa9ef31b4055/2ebcc839069e6188-16/s540x810/07b5b2b3c26b945edec61508a821608789183674.pnj" alt="Inactive 1">
         </a>
-        <a href="https://www.youtube.com/@active2" target="_blank" class="participant active">
+        <a href="https://www.youtube.com/@active2" target="_blank" class="participant inactive">
             <img src="https://64.media.tumblr.com/c7e8f8b56691c7188090aa9ef31b4055/2ebcc839069e6188-16/s540x810/07b5b2b3c26b945edec61508a821608789183674.pnj" alt="Active 2">
         </a>
         <a href="https://www.youtube.com/@inactive2" target="_blank" class="participant inactive">
