--- a/ranking.html
+++ b/ranking.html
@@ -80,20 +80,22 @@
         <button onclick="filterParticipants('active')">Activos</button>
         <button onclick="filterParticipants('inactive')">Inactivos</button>
     </div>
+    
+    <!-- Imagenes de gente activa-inactiva -->
     <div class="participants-grid" id="participantsGrid">
-        <a href="https://www.youtube.com/@active1" target="_blank" class="participant active">
+        <a href="https://www.youtube.com/@active1" target="_blank" class="participant active"> <!-- Usuario -->
             <img src="https://64.media.tumblr.com/c7e8f8b56691c7188090aa9ef31b4055/2ebcc839069e6188-16/s540x810/07b5b2b3c26b945edec61508a821608789183674.pnj" alt="Active 1">
         </a>
-        <a href="https://www.youtube.com/@inactive1" target="_blank" class="participant inactive">
+        <a href="https://www.youtube.com/@inactive1" target="_blank" class="participant inactive"> <!-- Usuario -->
             <img src="https://64.media.tumblr.com/c7e8f8b56691c7188090aa9ef31b4055/2ebcc839069e6188-16/s540x810/07b5b2b3c26b945edec61508a821608789183674.pnj" alt="Inactive 1">
         </a>
-        <a href="https://www.youtube.com/@active2" target="_blank" class="participant inactive">
+        <a href="https://www.youtube.com/@active2" target="_blank" class="participant inactive"> <!-- Usuario -->
             <img src="https://64.media.tumblr.com/c7e8f8b56691c7188090aa9ef31b4055/2ebcc839069e6188-16/s540x810/07b5b2b3c26b945edec61508a821608789183674.pnj" alt="Active 2">
         </a>
-        <a href="https://www.youtube.com/@inactive2" target="_blank" class="participant inactive">
+        <a href="https://www.youtube.com/@inactive2" target="_blank" class="participant inactive"> <!-- Usuario -->
             <img src="https://via.placeholder.com/150" alt="Inactive 2">
         </a>
-        <a href="https://www.youtube.com/@active3" target="_blank" class="participant active">
+        <a href="https://www.youtube.com/@active3" target="_blank" class="participant active"> <!-- Usuario -->
             <img src="https://via.placeholder.com/150" alt="Active 3">
         </a>
     </div>
