--- a/ranking.html
+++ b/ranking.html
@@ -9,8 +9,7 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 20px;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
+      background: url('https://64.media.tumblr.com/90f6cdcbc51c53fa4ca7294da96fc3f8/tumblr_pios19KpQC1ufq8wko1_540.gifv') no-repeat center center fixed;            color: white;
         }
         .filter-buttons {
             margin-bottom: 20px;
