--- a/ranking.html
+++ b/ranking.html
@@ -6,10 +6,11 @@
     <title>Participantes - Activos/Inactivos</title>
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 20px;
-      background: url('https://64.media.tumblr.com/90f6cdcbc51c53fa4ca7294da96fc3f8/tumblr_pios19KpQC1ufq8wko1_540.gifv') no-repeat center center fixed;            color: white;
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: url('https://64.media.tumblr.com/90f6cdcbc51c53fa4ca7294da96fc3f8/tumblr_pios19KpQC1ufq8wko1_540.gifv') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
         }
         .filter-buttons {
             margin-bottom: 20px;
