--- a/ranking.html
+++ b/ranking.html
@@ -59,7 +59,8 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 40px;
+            border: 4px solid #FFD700;
+            border-radius: 10px;
         }
         .inactive img {
             filter: grayscale(100%);
