--- a/ranking.html
+++ b/ranking.html
@@ -59,7 +59,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border: 4px solid #00008B;
+            border: 4px solid #FFD700;
             border-radius: 10px;
         }
         .inactive img {
