--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       color: #fff;
     }
     .elemento {
-       cursor: url('https://64.media.tumblr.com/decd4230411c821ecd1556ec71c7bf1a/04025e6c925c2e04-39/s75x75_c1/a8613fe58a5769e3c2248c234930549601f0a15b.pnj'), auto;
+       cursor: url('cursor.png'), auto;
 }
     .navbar {
       background: rgba(0, 0, 0, 0.9);
