--- a/index.html
+++ b/index.html
@@ -100,6 +100,21 @@
     .video-btn:hover {
       color: #e84118;
     }
+.small-image {
+    width: 100px;
+    height: 100px;
+}
+
+.medium-image {
+    width: 300px;
+    height: 200px;
+}
+
+.large-image {
+    width: 500px;
+    height: 400px;
+}
+
   </style>
 </head>
 <body>
@@ -124,7 +139,7 @@
   <section id="inicio" class="container">
     <h1>Bienvenidos al Torneo XYZ</h1>
     <p>¡Participa en el torneo más emocionante del año! Descubre fechas, reglas y toda la información importante.</p>
-    <img src="https://64.media.tumblr.com/91dad312b83f2b01481a28c25e8e32c5/41f279afada44e32-8c/s2048x3072/c6c124fe38338eed51ea8a8acab6bb3e94cd49e2.pnj">
+    <img src="https://64.media.tumblr.com/91dad312b83f2b01481a28c25e8e32c5/41f279afada44e32-8c/s2048x3072/c6c124fe38338eed51ea8a8acab6bb3e94cd49e2.pnj">class="medium-image">
   </section>
 </body>
 </html>
