--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
     width: 100px;
     height: 100px;
 }
-
+    
+.logo {
+  width: 50px;
+  height: auto; 
+}
+    
 .medium-image {
     width: 300px;
     height: 200px;
@@ -121,6 +126,7 @@
 <body>
     <!-- NAVBAR -->
   <nav class="navbar">
+    <img src="logo.png" alt="Logo" class="logo">
     <a href="index.html">Inicio</a>
     <a href="registro.html">Registro</a>
     <a href="ranking.html">Ranking</a>
