--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     .navbar {
       background: rgba(0, 0, 0, 0.9);
       display: flex;
+      align-items: center;
       justify-content: space-around;
       padding: 1rem 2rem;
     }
@@ -28,6 +29,7 @@
       color: #fff;
       text-decoration: none;
       font-weight: bold;
+      
     }
     .container {
       margin: 2rem;
