--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
     }
       
     
-    .container {
+    /*.container {
       margin: 2rem;
       backdrop-filter: blur(10px);
       background: rgba(0, 0, 0, 0.5);
       border-radius: 12px;
       padding: 2rem;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
-    }
+    }*/
     .filter {
       margin-bottom: 1rem;
     }
