--- a/index.html
+++ b/index.html
@@ -309,6 +309,11 @@
     /*IMAGENES REDONDAS FINAL------------*/
     
 /*---------------IMAGENES CUADRADAS QUE KUSER JODE------------------*/
+    .contenedor-principal {
+  display: flex; /* Hace que los hijos estén en fila */
+  gap: 20px; /* Espacio entre los contenedores, opcional */
+}
+    
     .container {
       display: grid;
       gap: 20px;
@@ -398,10 +403,10 @@
   
 
 <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
-
-<div class="container">
+<div class=""contenedor-principal>
+ <div class="container">
   <div class="box box1"><img src="https://64.media.tumblr.com/a44b8a0342d6643b3a27f89eb2d127cf/eb900c2dc05b2a5e-44/s2048x3072/6cd2a445aa297b23e29ef3d216669864b101efa8.pnj" alt="Imagen 1">
-  <div class="overlay">
+        <div class="overlay">
             <div class="category">1</div>
             <div class="title">NASA Sets Coverage for Crew Launch</div>
         </div>
@@ -414,19 +419,20 @@
         </div>
   </div>
 </div>
-<div class="conteiner2">
+ <div class="conteiner2">
   <div class="box box3"><img src="https://64.media.tumblr.com/34629d5b60c1fdb0b3d8debcd3386dd5/5423f784ebaf7a7f-79/s640x960/6165ad10461214b889282e841d86066c62872411.jpg" alt="Imagen 3">
-  <div class="overlay">
+        <div class="overlay">
             <div class="category">1</div>
             <div class="title">NASA Sets Coverage for Crew Launch</div>
         </div>
   </div>
   <div class="box box4"><img src="https://64.media.tumblr.com/34629d5b60c1fdb0b3d8debcd3386dd5/5423f784ebaf7a7f-79/s640x960/6165ad10461214b889282e841d86066c62872411.jpg" alt="Imagen 4">
-  <div class="overlay">
+        <div class="overlay">
             <div class="category">1</div>
             <div class="title">NASA Sets Coverage for Crew Launch</div>
         </div>
   </div>
+ </div>
 </div>
 <!---diiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiv--->
 <!---OMAGENES REDONDAS CON TITULO--->
