--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     /*IMAGENES REDONDAS FINAL------------*/
     
 /*---------------IMAGENES CUADRADAS QUE KUSER JODE------------------*/
-    .contenedor-principal {
+.contenedor-principal {
   display: flex; /* Hace que los hijos estén en fila */
   gap: 20px; /* Espacio entre los contenedores, opcional */
 }
@@ -403,7 +403,7 @@
   
 
 <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
-<div class=""contenedor-principal>
+<div class="contenedor-principal">
  <div class="container">
   <div class="box box1"><img src="https://64.media.tumblr.com/a44b8a0342d6643b3a27f89eb2d127cf/eb900c2dc05b2a5e-44/s2048x3072/6cd2a445aa297b23e29ef3d216669864b101efa8.pnj" alt="Imagen 1">
         <div class="overlay">
