--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5); /* Efecto de oscurecimiento */
+    margin-bottom: 20px;
 }
 
 .banner-content {
