--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
 .contenedor-principal {
   display: flex; /* Hace que los hijos estén en fila */
   gap: 20px; /* Espacio entre los contenedores, opcional */
+  padding: 20px;
 }
     
     .container {
