--- a/index.html
+++ b/index.html
@@ -408,14 +408,14 @@
 <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
 <div class="contenedor-principal">
  <div class="container">
-  <div class="box box1"><img src="https://64.media.tumblr.com/a44b8a0342d6643b3a27f89eb2d127cf/eb900c2dc05b2a5e-44/s2048x3072/6cd2a445aa297b23e29ef3d216669864b101efa8.pnj" alt="Imagen 1">
+  <div class="box box1"><img src="https://i.imgur.com/x1SxwVQ.png" alt="Imagen 1">
         <div class="overlay">
             <div class="category">1</div>
             <div class="title">NASA Sets Coverage for Crew Launch</div>
         </div>
   </div>
   
-  <div class="box box2"><img src="https://64.media.tumblr.com/89fc15ba0536f608881660d46d46dd6c/a4c41e492b887468-77/s2048x3072/5f317e91702ac64eddaa9bd66d2dc61f760d09e6.pnj" alt="Imagen 2">
+  <div class="box box2"><img src="https://i.imgur.com/XwbMAhz.png" alt="Imagen 2">
   <div class="overlay">
             <div class="category">1</div>
             <div class="title">NASA Sets Coverage for Crew Launch</div>
@@ -423,13 +423,13 @@
   </div>
 </div>
  <div class="conteiner2">
-  <div class="box box3"><img src="https://64.media.tumblr.com/34629d5b60c1fdb0b3d8debcd3386dd5/5423f784ebaf7a7f-79/s640x960/6165ad10461214b889282e841d86066c62872411.jpg" alt="Imagen 3">
+  <div class="box box3"><img src="https://i.imgur.com/RvJtXM4.png" alt="Imagen 3">
         <div class="overlay">
             <div class="category">1</div>
             <div class="title">NASA Sets Coverage for Crew Launch</div>
         </div>
   </div>
-  <div class="box box4"><img src="https://64.media.tumblr.com/34629d5b60c1fdb0b3d8debcd3386dd5/5423f784ebaf7a7f-79/s640x960/6165ad10461214b889282e841d86066c62872411.jpg" alt="Imagen 4">
+  <div class="box box4"><img src="https://i.imgur.com/7zjpXuW.png" alt="Imagen 4">
         <div class="overlay">
             <div class="category">1</div>
             <div class="title">NASA Sets Coverage for Crew Launch</div>
