--- a/index.html
+++ b/index.html
@@ -410,8 +410,8 @@
  <div class="container">
   <div class="box box1"><img src="https://i.imgur.com/x1SxwVQ.png" alt="Imagen 1">
         <div class="overlay">
-            <div class="category">1</div>
-            <div class="title">NASA Sets Coverage for Crew Launch</div>
+            <div class="category">4 MIN READ</div>
+            <div class="title">"Astra incursiona en la medicina de la mano de Pharmahearts"</div>
         </div>
   </div>
   
