--- a/index.html
+++ b/index.html
@@ -417,22 +417,22 @@
   
   <div class="box box2"><img src="https://i.imgur.com/XwbMAhz.png" alt="Imagen 2">
   <div class="overlay">
-            <div class="category">1</div>
-            <div class="title">NASA Sets Coverage for Crew Launch</div>
+            <div class="category">2 MIN READ</div>
+            <div class="title">"EI CEO de Burning Inc. llegó a la Vía Lactea"</div>
         </div>
   </div>
 </div>
  <div class="conteiner2">
   <div class="box box3"><img src="https://i.imgur.com/RvJtXM4.png" alt="Imagen 3">
         <div class="overlay">
-            <div class="category">1</div>
-            <div class="title">NASA Sets Coverage for Crew Launch</div>
+            <div class="category">2 MIN READ</div>
+            <div class="title">"Grupo terrorista aterroriza las calles"</div>
         </div>
   </div>
   <div class="box box4"><img src="https://i.imgur.com/7zjpXuW.png" alt="Imagen 4">
         <div class="overlay">
-            <div class="category">1</div>
-            <div class="title">NASA Sets Coverage for Crew Launch</div>
+            <div class="category">5 MIN READ</div>
+            <div class="title">"Las hijas de la familia Minelli"</div>
         </div>
   </div>
  </div>
