--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
   <div class="box box2"><img src="https://i.imgur.com/XwbMAhz.png" alt="Imagen 2">
   <div class="overlay">
             <div class="category">2 MIN READ</div>
-            <div class="title">"EI CEO de Burning Inc. llegó a la Vía Lactea"</div>
+            <div class="title">"EI CEO de Burning Inc.ㅤㅤ llegó a la Vía Lactea"</div>
         </div>
   </div>
 </div>
