--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
   <div class="box box3"><img src="https://i.imgur.com/RvJtXM4.png" alt="Imagen 3">
         <div class="overlay">
             <div class="category">2 MIN READ</div>
-            <div class="title">"Grupo terrorista aterroriza las calles"</div>
+            <div class="title">"Grupo terroristaㅤㅤ aterroriza las calles"</div>
         </div>
   </div>
   <div class="box box4"><img src="https://i.imgur.com/7zjpXuW.png" alt="Imagen 4">
