--- a/index.html
+++ b/index.html
@@ -315,6 +315,10 @@
   display: flex; /* Hace que los hijos estén en fila */
   gap: 20px; /* Espacio entre los contenedores, opcional */
   padding: 40px;
+  flex-wrap: wrap;          
+  justify-content: center;  
+  max-width: 1200px;        
+  margin: 0 auto;   
 }
     
     .container {
@@ -422,7 +426,7 @@
         </div>
   </div>
 </div>
- <div class="conteiner2">
+ <div class="container2">
   <div class="box box3"><img src="https://i.imgur.com/RvJtXM4.png" alt="Imagen 3">
         <div class="overlay">
             <div class="category">2 MIN READ</div>
