--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
   display: flex; /* Hace que los hijos estén en fila */
   gap: 20px; /* Espacio entre los contenedores, opcional */
   padding: 40px;
-  
+  justify-content: center;
 }
     
     .container {
