--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     .container2 {
       /*display: block;*/
       gap: 20px;
-      padding: 10px;
+      /*padding: 10px;*/
     
     }
     
