--- a/index.html
+++ b/index.html
@@ -369,6 +369,23 @@
       margin-top: 20px;
     }
 /*------------------------------------------------------------------*/    
+    .post-label {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: rgba(255, 255, 255, 0.85);
+  color: #000;
+  font-size: 11px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 4px 8px;
+  border-radius: 4px;
+  z-index: 5;
+  pointer-events: none; /* Para que no bloquee clics */
+}
+
+
+/*------------------------------------------------------------------*/    
     
   </style>
 </head>
