--- a/index.html
+++ b/index.html
@@ -373,8 +373,7 @@
   position: absolute;
   top: 10px;
   left: 10px;
-  background: rgba(255, 255, 255, 0.85);
-  color: #000;
+  color: #ffff;
   font-size: 11px;
   font-weight: bold;
   text-transform: uppercase;
